# GameVault

./: .gitignore  README.md  Readme.md  build.bat  index.html  main.py  package-lock.json  package.json  vite.config.ts
core/: __init__.py  backup_engine.py  bat_generator.py  config_manager.py  game_detector.py  version.py
data/: config.json  games.json
old-python/: Readme.md  main.py
old-python/core/: game_db.py
scripts/: generate_icons.py
src/: global.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  datadump.rs  games.rs  keymapper.rs  lib.rs  main.rs  perf.rs  recording.rs  screenshots.rs  shortcuts.rs  tray.rs  window.rs
src/components/: GameCover.tsx  Header.tsx  PerformancePanel.tsx  ShortcutRecorder.tsx  Sidebar.tsx  TitleBar.tsx
src/components/Markdown/: index.tsx
src/components/overlay/: OverlayArcade.tsx  OverlayChat.tsx  OverlayMacros.tsx  OverlayNotes.tsx  OverlaySearch.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  (+7 more)
src/contexts/: app.context.tsx  index.ts  theme.context.tsx
src/data/: games.json
src/layouts/: MainLayout.tsx
src/lib/: chat-history.storage.ts  index.ts  keycode-map.ts  useKeyEngine.ts  utils.ts
src/pages/: AddGame.tsx  AiChat.tsx  GameDetail.tsx  KeyMapper.tsx  Library.tsx  Macros.tsx  Notes.tsx  Overlay.tsx  Performance.tsx  Recordings.tsx  Screenshots.tsx  Settings.tsx  SetupWizard.tsx  Shortcuts.tsx
src/routes/: index.tsx
src/types/: index.ts
ui/: __init__.py  main_window.py
(+2 files in other folders)
