[package]
name = "gamevault"
version = "2.0.0"
description = "GameVault - The ultimate game save manager"
authors = ["Ranit Bhowmick <main@ranitbhowmick.com>"]
license = "MIT"
repository = "https://github.com/Kawai-Senpai/GameVault"
edition = "2021"

[lib]
name = "gamevault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2.5.2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.6"
xcap = "0.0.12"
base64 = "0.22"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19.0"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
tracing = "0.1"
zip = "2.4"
sha2 = "0.10"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
open = "5"
reqwest = { version = "0.12", features = ["json"] }
directories = "5"
sysinfo = "0.33"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
] }
winapi = { version = "0.3", features = ["winuser", "pdh"] }
winreg = "0.52"
